Scrollbar fix

--- a/sass/layouts/pages/_page-login.scss
+++ b/sass/layouts/pages/_page-login.scss
@@ -1,3 +1,7 @@
+.content-container {
+  padding-bottom: 12px;
+}
+
 .heading {
   color: $primary-color;
   font-family: $base-font-family;
@@ -20,6 +24,7 @@
 }
 
 .login-form-container {
+  /* IMAGE PART */
   .left-part img {
     float: left;
     width: 50%;
